[gd_scene load_steps=14 format=3 uid="uid://cekpwsv4av731"]

[ext_resource type="Script" path="res://assets/enemies/enemy.gd" id="1_2wlcm"]
[ext_resource type="Script" path="res://addons/sprite_mesh/sprite_mesh_instance.gd" id="2_dnuvi"]
[ext_resource type="Script" path="res://addons/sprite_mesh/sprite_mesh.gd" id="3_6i28t"]
[ext_resource type="Script" path="res://assets/components/stats_component.gd" id="4_5or42"]
[ext_resource type="Script" path="res://assets/components/move_component.gd" id="5_u7b57"]
[ext_resource type="Script" path="res://assets/components/scale_component.gd" id="6_0o080"]
[ext_resource type="Script" path="res://assets/components/flash_component.gd" id="7_reg0r"]
[ext_resource type="Script" path="res://assets/components/shake_component.gd" id="8_wme1p"]
[ext_resource type="Script" path="res://assets/components/hitbox_component.gd" id="9_t44l5"]
[ext_resource type="Script" path="res://assets/components/hurtbox_component.gd" id="10_70i6m"]

[sub_resource type="ArrayMesh" id="ArrayMesh_q6fuc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8qcab"]

[sub_resource type="Resource" id="Resource_i1u6o"]
script = ExtResource("3_6i28t")
meshes = Array[ArrayMesh]([])
material = SubResource("StandardMaterial3D_8qcab")

[node name="Enemy" type="Node3D"]
script = ExtResource("1_2wlcm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"

[node name="SpriteMeshInstance" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("ArrayMesh_q6fuc")
script = ExtResource("2_dnuvi")
pixel_size = 0.1
hframes = 3
frame = 1
frame_coords = Vector2i(1, 0)
region_rect = Rect2i(16, 0, 16, 16)
generated_sprite_mesh = SubResource("Resource_i1u6o")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("4_5or42")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_u7b57")
actor = NodePath("..")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_0o080")
sprite = NodePath("../SpriteMeshInstance")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("7_reg0r")
sprite = NodePath("../SpriteMeshInstance")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("8_wme1p")
node = NodePath("../SpriteMeshInstance")

[node name="HitboxComponent" type="Area3D" parent="."]
script = ExtResource("9_t44l5")

[node name="HurtboxComponent" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
script = ExtResource("10_70i6m")
